[package]
name = "qrport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
local-ip-address = "0.5.1"
qrcode-generator = "4.1.7"

[profile.release]
strip = true
lto = true
